<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/bank_item"
    style="@style/RecyclerViewItemStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

	<ImageView
		android:id="@+id/bank_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:contentDescription="@string/icon_bank_desc"
		app:srcCompat="@drawable/ic_bank"
		tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/eukraine_thin"
        android:text="@string/bank_partner_name"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/textSmall" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:contentDescription="@string/icon_link_desc"
        app:srcCompat="@android:drawable/ic_menu_set_as" />
</LinearLayout>