<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/RecyclerViewItemStyle"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:baselineAligned="false"
	android:orientation="vertical">

	<TextView
		android:id="@+id/tv_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:fontFamily="@font/eukraine_thin"
		android:paddingBottom="@dimen/blockPadding"
		android:text="@string/product_name"
		android:textColor="@color/primaryText"
		android:textSize="@dimen/textDefault"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/tv_brand"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:fontFamily="@font/eukraine_thin"
		android:text="@string/search_brand_input"
		android:textColor="@color/primaryText"
		android:textSize="@dimen/textSmall"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/tv_ean"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:fontFamily="@font/eukraine_thin"
		android:text="@string/ean"
		android:textColor="@color/primaryText"
		android:textSize="@dimen/textSmall"
		android:textStyle="bold" />
</LinearLayout>
